<resources>
    <string name="app_name">Vigilant Application</string>
    <string name="login_title">Login</string>
    <string name="phone_number">Enter Phone Number</string>
    <string name="email_address">Enter Email Address  </string>
    <string name="password">Enter Password </string>
    <string name="confirm_password">Confirm Password </string>
    <string name="forgot_password">Forgot Password? </string>
    <string name="login_button">LOGIN </string>
    <string name="new_user">New User </string>
    <string name="register">Register </string>
    <string name="official_account">Go to Officers login </string>
    <string name="client_account">Go back to client Login</string>
    <string name="more_information">For more information please contact:  </string>
    <string name="login_trouble">Having trouble logging in ?</string>
    <string name="admin_contact">Contact Admin</string>
    <string name="registration">Registration </string>
    <string name="identification">Enter ID </string>

    <string name="address">Enter your Address </string>
    <string name="email_id">Enter the email id </string>

    <string name="user_name">Enter the Name </string>
    <string name="ID_type">Select ID Type </string>
    <string name="ID_number">Enter ID Number </string>
    <string name="select_password">Select a Password </string>

    <string name="complaint_subject">Subject</string>
    <string name="office_type">Enter the Govt Establishment</string>
    <string name="location">Enter Location/Address</string>
    <string name="complain">Name/Position of the accused</string>
    <string name="description">Description</string>
    <string name="photo_upload">Upload a Photo (Optional)</string>
    <string name="contact_number">Enter a Contact Number (Optional)</string>
    <string name="anonymous">Add Complaint Anonymously :</string>
    <string name="complaint_button">ADD COMPLAINT</string>

    <string name="goBack_button">Go Back</string>
    <string name="help_button">Help?</string>

    <string name="profile_heading">Your Profile</string>
    <string name="edit_profile_button">Edit Profile</string>
    <string name="edit_profile_heading">Update Profile </string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>

    <string name="check_status_heading">Your Complaints</string>
    <string name="respond">Respond</string>

    <string name="page_title">Status Update</string>
    <string name="client_contact">Contact Client</string>
    <string name="status_button">Update Status</string>

    <string name="submit_button">Submit</string>
    <string name="welcome_message">WELCOME</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>