<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/application_background"
    android:gravity="center"
    tools:context=".clientside.ClientComplainForm">

    <RelativeLayout
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_goBack_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goBack_button"
            android:textColor="@color/text_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_help_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tv_goBack_button"
            android:layout_alignParentEnd="true"
            android:text="@string/help_button"
            android:textColor="@color/text_color"
            android:textSize="20sp" />

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_complaint_subject"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/complaint_subject"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_office_type"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_complaint_subject"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/office_type"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_office_location"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_office_type"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/location"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_accused_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_office_location"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/complain"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <EditText
        android:id="@+id/et_description_box"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_below="@id/et_accused_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/spinner_background"
        android:gravity="start"
        android:hint="@string/description"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_photo_upload_query"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_description_box"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/spinner_background"
        android:drawableEnd="@drawable/ic_baseline_add_24"
        android:drawablePadding="20dp"
        android:hint="@string/photo_upload"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/iv_photo_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_description_box"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:visibility="gone" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_contact_number"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_photo_upload"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/contact_number"
            android:inputType="phone"
            android:padding="10dp"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_complainer_identity"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_contact_number"
        android:layout_marginTop="30dp"
        android:gravity="end"
        android:text="@string/anonymous"
        android:textColor="@color/text_color"
        android:textSize="17sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sb_switch_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_contact_number"
        android:layout_alignBaseline="@id/tv_complainer_identity"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/tv_complainer_identity" />

    <Button
        android:id="@+id/bt_add_complaint_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_complainer_identity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/background_color_two"
        android:text="@string/complaint_button"
        android:textColor="@color/text_color" />


</RelativeLayout>