<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/application_background"
    android:gravity="center"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="70dp"
            android:text="@string/login_title"
            android:textColor="@color/text_color"
            android:textSize="30sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignBottom="@id/tv_login_title"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_toRightOf="@id/tv_login_title"
            android:background="@color/off_black" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_phone_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_login_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:padding="10dp"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_phone_number"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/password"
                android:padding="10dp"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/bt_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/login_button_background_color"
            android:text="@string/login_button"
            android:textColor="@color/text_color"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/ll_linear_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bt_login_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_trouble"
                android:textColor="@color/text_color"
                android:textSize="15sp" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/off_black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin_contact"
                android:textColor="@color/reg_button_color"
                android:textSize="15dp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_section_break"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_linear_section"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
          >

            <View
                android:layout_width="190dp"
                android:layout_height="2dp"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:background="@color/off_black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="or"
                android:padding="10dp"
                android:textSize="20sp" />

            <View
                android:layout_width="190dp"
                android:layout_height="2dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:background="@color/off_black" />
        </RelativeLayout>

        <Button
            android:id="@+id/bt_account_switch_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_section_break"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/goto_button_background_color"
            android:text="@string/client_account"
            android:textColor="@color/text_color" />


    </RelativeLayout>
</RelativeLayout>